--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 #output-div img {
   /* display: block; */
   max-width: 100%;
-  max-height: 200px;
+  max-height: 250px;
   margin-right: 10px;
 }
 
@@ -32,7 +32,7 @@ body {
 }
 
 #container {
-  background-color: grey;
+  background-color: #b6d8f2;
   margin: 40px auto;
   max-width: 1000px;
   padding: 38px 31px;
@@ -54,10 +54,11 @@ button {
 }
 
 #output-div {
-  background-color: lightgrey;
+  /* background-color: lightgrey; */
   margin: 20px auto;
   padding: 20px;
   width: 100%;
+  text-align: center;
 }
 
 .logo-img {
@@ -88,11 +89,13 @@ button {
 table.tb {
   width: 400px;
   border-collapse: collapse;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
+  /* box-shadow: 0 0 20px rgba(0, 0, 0, 0.25); */
+  background-color: #b6d8f2;
+  margin: auto;
 }
 .tb th,
 .tb td {
-  /* border: solid 1px #777; */
+  border: solid 4px white;
   /* padding: 5px; */
   text-align: center;
   /* background-color: white; */
@@ -102,10 +105,20 @@ table.tb {
 }
 
 #score-board {
+  text-align: center;
   margin: 20px auto;
-  /* padding: 20px; */
   margin: 40px auto;
   max-width: 1000px;
-  /* margin-right: 0px;
-  margin-left: auto; */
+}
+
+#instructions {
+  background-color: white;
+  margin: 10px auto;
+  padding: 10px;
+  width: 100%;
+  font: 100;
+}
+
+#buttons {
+  text-align: center;
 }
